# chitra-video-editor

./: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
backend/: .env.example  Cargo.toml  README.md
backend/crates/api/: Cargo.toml
backend/crates/api/src/: beats.rs  config.rs  error.rs  main.rs  segment.rs  state.rs  transcribe.rs
backend/crates/api/src/routes/: assets.rs  beats.rs  chat.rs  health.rs  jobs.rs  mod.rs  projects.rs  segment.rs  transcribe.rs
backend/crates/chat/: Cargo.toml
backend/crates/chat/src/: lib.rs  tools.rs
backend/crates/core/: Cargo.toml
backend/crates/core/src/: lib.rs
backend/crates/storage/: Cargo.toml
backend/crates/storage/src/: lib.rs
backend/crates/transcode/: Cargo.toml
backend/crates/transcode/src/: lib.rs
docs/: edit-array-language.md  sam2-integration-plan.md
scripts/: install-sam2.sh  install-whisperx.sh  perf-gate.mjs  sam2_runner.py  whisperx_runner.py
src/: App.css  App.tsx  ChatPanel.test.tsx  ChatPanel.tsx  aiEditFlow.test.ts  aiEditHarness.spec.ts  beatDetection.ts  commandPalette.test.ts  commandPalette.ts  editArrayIr.ts  editArrayLanguage.test.ts  editArrayLanguage.ts  editCompiler.test.ts  editCompiler.ts  editRepairLoop.test.ts  editRepairLoop.ts  editRuntime.ts  effects.test.ts  effects.ts  mediaEngine.test.ts  mediaEngine.ts  performanceMonitor.ts  previewCompositor.ts  projectModel.test.ts  projectModel.ts  projectPersistence.test.ts  projectPersistence.ts  projectStore.test.ts  projectStore.ts  segmentation.ts  subtitles.test.ts  subtitles.ts  textPositioning.test.ts  textPositioning.ts  time.test.ts  time.ts  timelineInteractions.test.ts  timelineInteractions.ts  timelineRuntime.ts  timelineVirtualization.test.ts  (+7 more)
src/workers/: thumbnailWorker.ts  transcodeWorker.ts
