[package]
name = "api"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
chitra-chat.workspace = true
chitra-core.workspace = true
chitra-storage.workspace = true
chitra-transcode.workspace = true

tokio.workspace = true
futures.workspace = true
async-stream.workspace = true
bytes.workspace = true
base64.workspace = true

axum.workspace = true
tower.workspace = true
tower-http.workspace = true
http.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dotenvy.workspace = true
uuid.workspace = true
time.workspace = true
object_store.workspace = true
reqwest.workspace = true
tempfile = { workspace = true }
