[package]
name = "chitra-chat"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chitra-core.workspace = true

tokio.workspace = true
futures.workspace = true
async-stream.workspace = true
bytes.workspace = true

reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true

tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true

# In-process LRU + TTL cache. Tokio-native, lock-free reads, async-friendly.
moka = { version = "0.12", features = ["future"] }

# Stable hashing of conversation prefixes for the cache key.
blake3 = "1"
