[package]
name = "chitra-storage"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
chitra-core.workspace = true
tokio.workspace = true
sqlx.workspace = true
object_store.workspace = true
bytes.workspace = true
uuid.workspace = true
time.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
